refactor: remove link on header

--- a/index.html
+++ b/index.html
@@ -219,27 +219,28 @@
       <h1 class="login-modal__title">Вход на сайт</h1>
       <label for="login-email">Логин</label>
       <div class="login-modal__email-block">
-      <input id="login-email" type="email" placeholder="Введите почту">
-      <img src="./common/svg/Message-gray.svg" alt="">      
+        <input id="login-email" type="email" placeholder="Введите почту">
+        <img src="./common/svg/Message-gray.svg" alt="">
       </div>
       <label for="login-pass">Пароль</label>
       <button class="login-modal__link-remind">Напомнить</button>
       <div class="login-modal__password-block">
-      <input id="login-pass" type="password" placeholder="Введите пароль">
-      <img src="./common/svg/Eye.svg" alt="" class="show-pass">    
+        <input id="login-pass" type="password" placeholder="Введите пароль">
+        <img src="./common/svg/Eye.svg" alt="" class="show-pass">
       </div>
       <div class="login-modal__btn-block">
-      <button class="main-btn login-modal__btn-submit" type="submit">Войти</button><a class="login-modal__link-register" href="./registration.html">Регистрация</a>
-    </div>
+        <button class="main-btn login-modal__btn-submit" type="submit">Войти</button><a
+          class="login-modal__link-register" href="./registration.html">Регистрация</a>
+      </div>
     </form>
-    
+
     <form class="remind-password__content" action="" onsubmit="return false">
       <button class="remind-password__btn-close">&#9587;</button>
       <h1 class="remind-password__title">Напомнить пароль</h1>
-      <label for="remind-pass-email" >Укажите вашу почту</label>
+      <label for="remind-pass-email">Укажите вашу почту</label>
       <div class="remind-password__email-block">
-      <input id="remind-pass-email" type="email" placeholder="Введите почту">
-      <img src="./common/svg/Message-gray.svg" alt="">
+        <input id="remind-pass-email" type="email" placeholder="Введите почту">
+        <img src="./common/svg/Message-gray.svg" alt="">
       </div>
       <div class="remind-password__btn-block">
         <button type="submit" class="main-btn remind-password__btn-submit">Отправить</button>
@@ -268,54 +269,54 @@
         <h1 class="city__title">Выбрать город</h1>
         <button class="city__auto">Определить автоматически</button>
       </div>
-        <div class="city__search-block">
+      <div class="city__search-block">
         <img src="./common/svg/Search.svg" alt="">
         <input class="city__search" type="search" name="" id="" placeholder="Найти город">
-        </div>
-        <ul class="city__list">
-            <li class="city__item">
-                Москва
-                <img src="./common/svg/Checbox.svg" alt="">
-            </li>
-            <li class="city__item">Екатеринбург</li>
-            <li class="city__item">Краснодар</li>
-            <li class="city__item">Нижний Ровгород</li>
-            <li class="city__item">Новосибирск</li>
-            <li class="city__item">Ростов-на-Дону</li>
-            <li class="city__item">Самара</li>
-            <li class="city__item">Санкт-Петербург</li>
-            <li class="city__item">Уфа</li>
-            <li class="city__item">Челябинск</li>
-        </ul>
+      </div>
+      <ul class="city__list">
+        <li class="city__item">
+          Москва
+          <img src="./common/svg/Checbox.svg" alt="">
+        </li>
+        <li class="city__item">Екатеринбург</li>
+        <li class="city__item">Краснодар</li>
+        <li class="city__item">Нижний Ровгород</li>
+        <li class="city__item">Новосибирск</li>
+        <li class="city__item">Ростов-на-Дону</li>
+        <li class="city__item">Самара</li>
+        <li class="city__item">Санкт-Петербург</li>
+        <li class="city__item">Уфа</li>
+        <li class="city__item">Челябинск</li>
+      </ul>
     </div>
   </div>
 
-                  <div class="city__content">
-                  <button class="city__btn-close">&#9587;</button>
-                  <div class="city__header">
-                    <h1 class="city__title">Выбрать город</h1>
-                    <button class="city__auto">Определить автоматически</button>
-                  </div>
-                    <div class="city__search-block">
-                    <img src="./common/svg/Search.svg" alt="">
-                    <input class="city__search" type="search" name="" id="" placeholder="Найти город">
-                    </div>
-                    <ul class="city__list">
-                        <li class="city__item">
-                            Москва
-                            <img src="./common/svg/Checbox.svg" alt="">
-                        </li>
-                        <li class="city__item">Екатеринбург</li>
-                        <li class="city__item">Краснодар</li>
-                        <li class="city__item">Нижний Ровгород</li>
-                        <li class="city__item">Новосибирск</li>
-                        <li class="city__item">Ростов-на-Дону</li>
-                        <li class="city__item">Самара</li>
-                        <li class="city__item">Санкт-Петербург</li>
-                        <li class="city__item">Уфа</li>
-                        <li class="city__item">Челябинск</li>
-                    </ul>
-                </div>
+  <div class="city__content">
+    <button class="city__btn-close">&#9587;</button>
+    <div class="city__header">
+      <h1 class="city__title">Выбрать город</h1>
+      <button class="city__auto">Определить автоматически</button>
+    </div>
+    <div class="city__search-block">
+      <img src="./common/svg/Search.svg" alt="">
+      <input class="city__search" type="search" name="" id="" placeholder="Найти город">
+    </div>
+    <ul class="city__list">
+      <li class="city__item">
+        Москва
+        <img src="./common/svg/Checbox.svg" alt="">
+      </li>
+      <li class="city__item">Екатеринбург</li>
+      <li class="city__item">Краснодар</li>
+      <li class="city__item">Нижний Ровгород</li>
+      <li class="city__item">Новосибирск</li>
+      <li class="city__item">Ростов-на-Дону</li>
+      <li class="city__item">Самара</li>
+      <li class="city__item">Санкт-Петербург</li>
+      <li class="city__item">Уфа</li>
+      <li class="city__item">Челябинск</li>
+    </ul>
+  </div>
   <div class="wrapper">
     <header class="header">
       <div class="container">
@@ -347,7 +348,7 @@
               </a>
             </button>
             <button type="button" class="icon-btn header__map-btn location">
-              <a href="./registration.html">
+              <a href="#">
                 <img src="./common/svg/Location.svg" alt="">
               </a>
             </button>
@@ -357,7 +358,7 @@
               </a>
             </button>
             <button type="button" class="icon-btn header__user-btn">
-              <a href="./user-account.html">
+              <a href="#">
                 <img src="./common/svg/User.svg" alt="">
               </a>
             </button>
@@ -697,24 +698,28 @@
     </section>
     <div class="write-review">
       <div class="write-review__container">
-      <div class="write-review__content">
-      <h1 class="write-review__title">Написать отзыв</h1>
-      <form class="write-review__form" action="">
-          <label class="write-review__name" for="write-review-name">Ваше имя<input id="write-review-name" placeholder="Введите имя" type="text"></label>
-          <label class="write-review__phone" for="write-review-phone">Телефон<input id="write-review-phone" placeholder="+7(" type="tel"></label>
-          <label class="write-review__email" for="write-review-email">E-mail<input id="write-review-email" placeholder="Введите e-mail" type="email"></label>
-          <label class="write-review__text" for="write-review-text"><textarea id="write-review-text" placeholder="Текст отзыва" name="" id="" cols="30" rows="10"></textarea></label>
-          <span class="write-review__politic">Нажимая кнопку отправить, вы соглашаетесь
+        <div class="write-review__content">
+          <h1 class="write-review__title">Написать отзыв</h1>
+          <form class="write-review__form" action="">
+            <label class="write-review__name" for="write-review-name">Ваше имя<input id="write-review-name"
+                placeholder="Введите имя" type="text"></label>
+            <label class="write-review__phone" for="write-review-phone">Телефон<input id="write-review-phone"
+                placeholder="+7(" type="tel"></label>
+            <label class="write-review__email" for="write-review-email">E-mail<input id="write-review-email"
+                placeholder="Введите e-mail" type="email"></label>
+            <label class="write-review__text" for="write-review-text"><textarea id="write-review-text"
+                placeholder="Текст отзыва" name="" id="" cols="30" rows="10"></textarea></label>
+            <span class="write-review__politic">Нажимая кнопку отправить, вы соглашаетесь
               с политикой обработки <a class="write-review__link" href="">персональных данных</a></span>
-          <div class="write-review__captcha">
-            <img src="./common/images/Капча.png" alt="">
-          </div>
-          <button class="write-review__btn-submit main-btn">ОТПРАВИТЬ</button>
-          <button class="write-review__btn-close">&#9587;</button>
-      </form>
+            <div class="write-review__captcha">
+              <img src="./common/images/Капча.png" alt="">
+            </div>
+            <button class="write-review__btn-submit main-btn">ОТПРАВИТЬ</button>
+            <button class="write-review__btn-close">&#9587;</button>
+          </form>
+        </div>
       </div>
-  </div>
-  </div>
+    </div>
     <section class="reviews">
       <div class="container-main">
         <div class="reviews__top">
@@ -988,24 +993,28 @@
     </footer>
     <div class="feedback">
       <div class="feedback__container">
-      <div class="feedback__content">
-      <h1 class="feedback__title">Обратная связь</h1>
-      <form class="feedback__form" action="">
-          <label class="feedback__name" for="feedback-name">Ваше имя<input id="feedback-name" placeholder="Введите имя" type="text"></label>
-          <label class="feedback__phone" for="feedback-phone">Телефон<input id="feedback-phone" placeholder="+7(" type="tel"></label>
-          <label class="feedback__email" for="feedback-email">E-mail<input id="feedback-email" placeholder="Введите e-mail" type="email"></label>
-          <label class="feedback__text" for="feedback-text"><textarea id="feedback-text" placeholder="Текст сообщения" name="" id="" cols="30" rows="10"></textarea></label>
-          <span class="feedback__politic">Нажимая кнопку отправить, вы соглашаетесь
+        <div class="feedback__content">
+          <h1 class="feedback__title">Обратная связь</h1>
+          <form class="feedback__form" action="">
+            <label class="feedback__name" for="feedback-name">Ваше имя<input id="feedback-name"
+                placeholder="Введите имя" type="text"></label>
+            <label class="feedback__phone" for="feedback-phone">Телефон<input id="feedback-phone" placeholder="+7("
+                type="tel"></label>
+            <label class="feedback__email" for="feedback-email">E-mail<input id="feedback-email"
+                placeholder="Введите e-mail" type="email"></label>
+            <label class="feedback__text" for="feedback-text"><textarea id="feedback-text" placeholder="Текст сообщения"
+                name="" id="" cols="30" rows="10"></textarea></label>
+            <span class="feedback__politic">Нажимая кнопку отправить, вы соглашаетесь
               с политикой обработки <a class="feedback__link" href="">персональных данных</a></span>
-          <div class="feedback__captcha">
-            <img src="./common/images/Капча.png" alt="">
-          </div>
-          <button class="feedback__btn-submit main-btn">ОТПРАВИТЬ</button>
-          <button class="feedback__btn-close">&#9587;</button>
-      </form>
+            <div class="feedback__captcha">
+              <img src="./common/images/Капча.png" alt="">
+            </div>
+            <button class="feedback__btn-submit main-btn">ОТПРАВИТЬ</button>
+            <button class="feedback__btn-close">&#9587;</button>
+          </form>
+        </div>
       </div>
     </div>
-  </div>
   </div>
   <script src="https://unpkg.com/feather-icons"></script>
   <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
