refactor: add link

--- a/checkout.html
+++ b/checkout.html
@@ -376,7 +376,7 @@
                             <p class="account__title">Способ доставки</p>
                             <div class="account__form-wrapp">
                                 <div class="checkout__radio-block">
-                                    <div class="registration__natural-person devilery1" >
+                                    <div class="registration__natural-person devilery1">
                                         <input class="radio" type="radio" id="moscow" name="devilery"
                                             value='курьер по Москве и МО'>
                                         <label for="moscow">Курьер по Москве и МО
@@ -384,7 +384,7 @@
                                         </label>
                                         <a href="#">Зависит от удаления от МКАД</a>
                                     </div>
-                                    <div class="registration__legal-person devilery2" >
+                                    <div class="registration__legal-person devilery2">
                                         <input class="radio" type="radio" id="russia" name="devilery"
                                             value='Курьерская служба почты Росии'>
                                         <label for="russia">Курьерская служба почты Росии
@@ -650,20 +650,19 @@
                             </div>
                             <div class="account__save">
                                 <div class="account__save-buttons registration__footer">
-                                    <button type="submit" class="main-btn registration__registration-btn">
-                                        <span>Оформить заказ</span>
-                                    </button>
+                                    <a href="./order.html">
+                                        <button type="button" class="main-btn registration__registration-btn">
+                                            <span>Оформить заказ</span>
+                                        </button>
+                                    </a>
                                     <p>Нажимая «Оформить заказ» вы соглашаетесь
                                         <span>с условиями предоставления услуг</span> и <br> <span>политикой хранения
-
-                                            персональных данных</span>
+                                        персональных данных</span>
                                     </p>
                                 </div>
                             </div>
-
                         </div>
                     </form>
-
                 </div>
             </main>
             <footer class="footer">
