refactor: add type button login btn

--- a/checkout.html
+++ b/checkout.html
@@ -345,7 +345,7 @@
                             <div class="account__form-wrapp">
                                 <div class="checkout__person-title-wrap">
                                     <p class="account__title">Персональные данные</p>
-                                    <button class="checkout__login">
+                                    <button type="button" class="checkout__login">
                                         <img src="./common/svg/User.svg" alt="">
                                         <span>Авторизация</span>
                                     </button>
