add: link phone and email

--- a/contacts.html
+++ b/contacts.html
@@ -380,13 +380,13 @@
                 <div class="contacts__block">
                   <span class="contacts__phone">
                     <span class="contacts__phone-title">КОНТАКТНЫЙ ТЕЛЕФОН</span>
-                    <a class="contacts__phone-number">
+                    <a href="tel:8 800 245 56 56" class="contacts__phone-number">
                       <img class="contacts__icon" src="./common/svg/Phone.svg" alt="">
                       8 800 245 56 56</a>
                   </span>
                   <span class="contacts__email">
                     <span class="contacts__email-title">E-MAIL</span>
-                    <a class="contacts__email-address">
+                    <a href="mailto:info@sitenam.ru" class="contacts__email-address">
                       <img class="contacts__icon" src="./common/svg/Message-green.svg" alt="">
                       info@sitenam.ru</a>
                   </span>
