add: link user account

--- a/order.html
+++ b/order.html
@@ -436,7 +436,7 @@
                 <p class="order__text">Номер вашего заказа - <span class="order__text--bold">AF22BND2</span></p> <img src="./common/svg/Cart-green.svg" alt="">
                 </div>
                 <div class="order__line--green"></div>
-                 <p class="order__text">Вы можете отслеживать ход выполнения в <a class="order__link" href="">Личном кабинете</a></p>
+                 <p class="order__text">Вы можете отслеживать ход выполнения в <a class="order__link" href="./user-account.html">Личном кабинете</a></p>
                 </div>
             <div class="order__content--right">
                 <div class="order__text-block">
