--- a/checkout.html
+++ b/checkout.html
@@ -335,7 +335,7 @@
                                 <div class="checkout__person-title-wrap">
                                     <p class="account__title">Персональные данные</p>
                                     <button type="button" class="checkout__login">
-                                        <img src="./common/svg/User.svg" alt="">
+                                        <img src="./common/svg/User-green.svg" alt="">
                                         <span>Авторизация</span>
                                     </button>
                                 </div>
