--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                 <img src="./common/svg/Search.svg" alt="">
               </a>
             </button>
-            <button type="button" class="icon-btn header__map-btn location">
+            <button type="button" class="icon-btn header__map-btn location location">
               <a href="#">
                 <img src="./common/svg/Location.svg" alt="">
               </a>
