--- a/search-page.html
+++ b/search-page.html
@@ -259,6 +259,32 @@
         </p>
       </div>
     </div>
+    <div class="city__content">
+      <button class="city__btn-close">&#9587;</button>
+      <div class="city__header">
+        <h1 class="city__title">Выбрать город</h1>
+        <button class="city__auto">Определить автоматически</button>
+      </div>
+      <div class="city__search-block">
+        <img src="./common/svg/Search.svg" alt="">
+        <input class="city__search" type="search" name="" id="" placeholder="Найти город">
+      </div>
+      <ul class="city__list">
+        <li class="city__item">
+          Москва
+          <img src="./common/svg/Checbox.svg" alt="">
+        </li>
+        <li class="city__item">Екатеринбург</li>
+        <li class="city__item">Краснодар</li>
+        <li class="city__item">Нижний Ровгород</li>
+        <li class="city__item">Новосибирск</li>
+        <li class="city__item">Ростов-на-Дону</li>
+        <li class="city__item">Самара</li>
+        <li class="city__item">Санкт-Петербург</li>
+        <li class="city__item">Уфа</li>
+        <li class="city__item">Челябинск</li>
+      </ul>
+    </div>
   </div>
 
   <div class="filter-modal">
@@ -395,7 +421,7 @@
                 <img src="./common/svg/Search.svg" alt="">
               </a>
             </button>
-            <button type="button" class="icon-btn header__map-btn">
+            <button type="button" class="icon-btn header__map-btn location">
               <a href="./404.html">
                 <img src="./common/svg/Location.svg" alt="">
               </a>
