add: modal locations

--- a/shoping_cart.html
+++ b/shoping_cart.html
@@ -221,13 +221,13 @@
           <h1 class="login-modal__title">Вход на сайт</h1>
           <label for="login-email">Логин</label>
           <div class="login-modal__email-block">
-          <input id="login-email" type="email" placeholder="Введите почту">
+          <input id="login-email" required type="email" placeholder="Введите почту">
           <img src="./common/svg/Message-gray.svg" alt="">      
           </div>
           <label for="login-pass">Пароль</label>
           <button class="login-modal__link-remind">Напомнить</button>
           <div class="login-modal__password-block">
-          <input id="login-pass" type="password" placeholder="Введите пароль">
+          <input id="login-pass" required type="password" placeholder="Введите пароль">
           <img src="./common/svg/Eye.svg" alt="" class="show-pass">    
           </div>
           <div class="login-modal__btn-block">
@@ -240,7 +240,7 @@
           <h1 class="remind-password__title">Напомнить пароль</h1>
           <label for="remind-pass-email" >Укажите вашу почту</label>
           <div class="remind-password__email-block">
-          <input id="remind-pass-email" type="email" placeholder="Введите почту">
+          <input id="remind-pass-email" required type="email" placeholder="Введите почту">
           <img src="./common/svg/Message-gray.svg" alt="">
           </div>
           <div class="remind-password__btn-block">
