add: class seconds

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
       <div class="remind-password__btn-block">
         <button type="submit" class="main-btn remind-password__btn-submit">Закрыть</button>
         <p class="remind-password__text-hide">
-          Окно закроется через 3 сек.
+          Окно закроется через <span class="remind-password__seconds">3</span> сек.
         </p>
       </div>
     </div>
