--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
               <div style="background-color:rgb(240, 241, 245);padding-left: 0rem;" class="accordion card__accordion ">
                 Каталог продукции
                 <button style="background-color:rgb(240, 241, 245);" class="accordion__icon">
-                  <span class="chevron"></span>
+                  <span class="aside-chevrone">❯</span>
                 </button>
               </div>
               <div class="panel">
@@ -159,7 +159,7 @@
               <div style="background-color:rgb(240, 241, 245);padding-left: 0rem;" class="accordion card__accordion">
                 Направления
                 <button style="background-color:rgb(240, 241, 245);" class="accordion__icon">
-                  <span class="chevron"></span>
+                  <span class="aside-chevrone">❯</span>
                 </button>
               </div>
               <div class="panel">
@@ -180,7 +180,7 @@
               <div style="background-color:rgb(240, 241, 245);padding-left: 0rem;" class="accordion card__accordion">
                 Информация
                 <button style="background-color:rgb(240, 241, 245);" class="accordion__icon">
-                  <span class="chevron"></span>
+                  <span class="aside-chevrone">❯</span>
                 </button>
               </div>
               <div class="panel">
