--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
                 <a class="" href="#">Бренды</a>
               </div>
               <div class="nav-modal__main-nav-3">
-                <a class="" href="#">О компании</a>
+                <a class="" href="./about">О компании</a>
                 <a class="" href="./contacts">Контакты</a>
               </div>
             </div>
@@ -126,7 +126,7 @@
               </div>
               <div class="nav-modal__main-nav-2">
                 <a class="" href="#">Бренды</a>
-                <a class="" href="#">О компании</a>
+                <a class="" href="./about">О компании</a>
                 <a class="" href="./contacts">Контакты</a>
               </div>
             </div>
@@ -398,7 +398,7 @@
             </div>    
             <aside class="about__aside">
                 <ul class="aside__list">
-                    <li><a class="aside__item aside__item--this" href="#">О компании</a></li>
+                    <li><a class="aside__item aside__item--this" href="./about">О компании</a></li>
                     <li><a class="aside__item" href="#">Способы оплаты товаров</a></li>
                     <li><a class="aside__item" href="#">Условия доставки</a></li>
                     <li><a class="aside__item" href="#">Возврат товара</a></li>
@@ -490,7 +490,7 @@
                 </div>
                 <div class="footer__menu-wrap-right">
                   <a class="footer__link" href="#">Бренды</a>
-                  <a class="footer__link" href="#">О компании</a>
+                  <a class="footer__link" href="./about">О компании</a>
                   <a class="footer__link" href="./contacts">Контакты</a>
                 </div>
               </div>
