--- a/brand-inside.html
+++ b/brand-inside.html
@@ -48,7 +48,7 @@
                 <a class="" href="#">Бренды</a>
               </div>
               <div class="nav-modal__main-nav-3">
-                <a class="" href="#">О компании</a>
+                <a class="" href="./about">О компании</a>
                 <a class="" href="./contacts">Контакты</a>
               </div>
             </div>
@@ -127,7 +127,7 @@
               </div>
               <div class="nav-modal__main-nav-2">
                 <a class="" href="#">Бренды</a>
-                <a class="" href="#">О компании</a>
+                <a class="" href="./about">О компании</a>
                 <a class="" href="./contacts">Контакты</a>
               </div>
             </div>
@@ -1002,7 +1002,7 @@
             </div>
             <div class="footer__menu-wrap-right">
               <a class="footer__link" href="#">Бренды</a>
-              <a class="footer__link" href="#">О компании</a>
+              <a class="footer__link" href="./about">О компании</a>
               <a class="footer__link" href="./contacts">Контакты</a>
             </div>
           </div>
