--- a/shoping_cart.html
+++ b/shoping_cart.html
@@ -49,7 +49,7 @@
                                 <a class="" href="./brands-all.html">Бренды</a>
                             </div>
                             <div class="nav-modal__main-nav-3">
-                                <a class="" href="#">О компании</a>
+                                <a class="" href="./about">О компании</a>
                                 <a class="" href="#">Контакты</a>
                             </div>
                         </div>
@@ -128,7 +128,7 @@
                             </div>
                             <div class="nav-modal__main-nav-2">
                                 <a class="" href="#">Бренды</a>
-                                <a class="" href="#">О компании</a>
+                                <a class="" href="./about">О компании</a>
                                 <a class="" href="#">Контакты</a>
                             </div>
                         </div>
@@ -524,7 +524,7 @@
                         </div>
                         <div class="footer__menu-wrap-right">
                             <a class="footer__link" href="#">Бренды</a>
-                            <a class="footer__link" href="#">О компании</a>
+                            <a class="footer__link" href="./about">О компании</a>
                             <a class="footer__link" href="#">Контакты</a>
                         </div>
                     </div>
